[package]
name = "pallet-proof-of-contribution"
version = "0.1.0"
edition = "2021"
description = "Proof of Contribution pallet for EchoChain blockchain"

[dependencies]
frame-support = { default-features = false, path = "../../substrate/frame/support" }
frame-system = { default-features = false, path = "../../substrate/frame/system" }
sp-runtime = { default-features = false, path = "../../substrate/primitives/runtime" }
sp-std = { default-features = false, path = "../../substrate/primitives/std" }
pallet-balances = { default-features = false, path = "../../substrate/frame/balances" } # Add pallet-balances dependency

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "pallet-balances/std", # Add std feature for pallet-balances
]
