[package]
name = "pallet-content-rewards"
version = "0.1.0"
edition = "2021"

[dependencies]
frame-support = { default-features = false, version = "4.0.0-dev" }
frame-system = { default-features = false, version = "4.0.0-dev" }
sp-std = { default-features = false, version = "4.0.0-dev" }
pallet-sample-registry = { path = "../sample-registry", default-features = false }
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "polkadot-v1.1.0" }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "pallet-sample-registry/std",
    "frame-benchmarking?/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
