[package]
name = "pallet-governance"
version = "0.1.0"
edition = "2021"
description = "Governance pallet for EchoChain blockchain parameters"

[dependencies]
frame-support = { default-features = false, path = "../../../polkadot-sdk/substrate/frame/support" }
frame-system = { default-features = false, path = "../../../polkadot-sdk/substrate/frame/system" }
sp-core = { default-features = false, path = "../../../polkadot-sdk/substrate/primitives/core" }
sp-std = { default-features = false, path = "../../../polkadot-sdk/substrate/primitives/std" }
pallet-proof-of-contribution = { path = "../proof-of-contribution", default-features = false }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-std/std",
    "pallet-proof-of-contribution/std",
]
