[package]
name = "pallet-p2p-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
frame-support = { default-features = false, version = "4.0.0-dev" }
frame-system = { default-features = false, version = "4.0.0-dev" }
sp-std = { default-features = false, version = "4.0.0-dev" }
pallet-network-rewards = { path = "../network-rewards", default-features = false }
pallet-echochain-compute = { path = "../echochain-compute", default-features = false }
pallet-echochain-marketplace = { path = "../echochain-marketplace", default-features = false }
frame-benchmarking = { default-features = false, optional = true, path = "../../../../polkadot-sdk/substrate/frame/benchmarking" }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "pallet-network-rewards/std",
    "pallet-echochain-compute/std",
    "pallet-echochain-marketplace/std",
    "frame-benchmarking?/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
