[package]
name = "pallet-royalty-distribution"
version = "4.0.0-dev"
description = "FRAME pallet for dynamic royalty distribution with 70/10/20 token allocation"
authors = ["Echochain Team <https://github.com/echochain>"]
homepage = "https://echochain.io"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/echochain/echochain-node/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
frame-benchmarking = { default-features = false, optional = true, path = "../../../../polkadot-sdk/substrate/frame/benchmarking" }
frame-support = { default-features = false, path = "../../../../polkadot-sdk/substrate/frame/support" }
frame-system = { default-features = false, path = "../../../../polkadot-sdk/substrate/frame/system" }
sp-std = { default-features = false, path = "../../../../polkadot-sdk/substrate/primitives/std" }

[dev-dependencies]
sp-core = { path = "../../../../polkadot-sdk/substrate/primitives/core" }
sp-io = { path = "../../../../polkadot-sdk/substrate/primitives/io" }
sp-runtime = { path = "../../../../polkadot-sdk/substrate/primitives/runtime" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "sp-runtime/try-runtime",
]
