[package]
name = "pallet-sample-registry"
version = "4.0.0-dev"
description = "FRAME pallet for managing music sample metadata on EchoChain."
authors = ["EchoChain Team <info@echochain.xyz>"]
homepage = "https://echochain.xyz/"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/echochain/echochain-node/"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }

frame-support = { path = "../../../../polkadot-sdk/substrate/frame/support", default-features = false }
frame-system = { path = "../../../../polkadot-sdk/substrate/frame/system", default-features = false }

sp-std = { path = "../../../../polkadot-sdk/substrate/primitives/std", default-features = false }

[dev-dependencies]
sp-core = { path = "../../../../polkadot-sdk/substrate/primitives/core", default-features = false }
sp-io = { path = "../../../../polkadot-sdk/substrate/primitives/io", default-features = false }
sp-runtime = { path = "../../../../polkadot-sdk/substrate/primitives/runtime", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
]