[package]
name = "pallet-sample-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
frame-support = { default-features = false, path = "../../../polkadot-sdk/substrate/frame/support" }
frame-system = { default-features = false, path = "../../../polkadot-sdk/substrate/frame/system" }
sp-std = { default-features = false, path = "../../../polkadot-sdk/substrate/primitives/std" }
frame-benchmarking = { default-features = false, optional = true, path = "../../../polkadot-sdk/substrate/frame/benchmarking" }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "frame-benchmarking?/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
